--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^9.6.21",
     "@types/react": "^16.3.17",
     "@types/react-dom": "^16.0.6",
+    "tslint": "^5.10.0",
     "typescript": "^2.9.1"
   }
 }
