--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^1.2.1",
+    "@types/recompose": "^0.26.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
-    "react-scripts-ts": "2.15.1"
+    "react-scripts-ts": "2.15.1",
+    "recompose": "^0.27.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
