--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "@types/recompose": "^0.26.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
-    "react-scripts-ts": "2.15.1",
-    "recompose": "^0.27.1"
+    "react-scripts-ts": "2.15.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -21,6 +20,7 @@
     "@types/node": "^9.6.21",
     "@types/react": "^16.3.17",
     "@types/react-dom": "^16.0.6",
+    "recompose": "^0.27.1",
     "tslint": "^5.10.0",
     "typescript": "^2.9.1"
   }
