--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^1.2.1",
+    "@types/react-router-dom": "^4.3.0",
     "@types/recompose": "^0.26.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts-ts": "2.15.1"
   },
   "scripts": {
