--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^1.2.1",
     "@types/react-router-dom": "^4.3.0",
     "@types/recompose": "^0.26.1",
+    "firebase": "^5.3.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-router-dom": "^4.3.1",
