--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts-ts": "2.15.1"
+    "react-scripts-ts": "2.15.1",
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
