--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^1.2.1",
+    "@types/react-redux": "^6.0.5",
     "@types/react-router-dom": "^4.3.0",
     "@types/recompose": "^0.26.1",
     "firebase": "^5.3.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "2.15.1",
     "redux": "^4.0.0"
