--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "@types/react-redux": "^6.0.5",
     "@types/react-router-dom": "^4.3.0",
     "@types/recompose": "^0.26.1",
+    "connected-react-router": "^4.3.0",
     "firebase": "^5.3.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "2.15.1",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -26,6 +29,7 @@
     "@types/node": "^9.6.21",
     "@types/react": "^16.3.17",
     "@types/react-dom": "^16.0.6",
+    "@types/redux-logger": "^3.0.6",
     "recompose": "^0.27.1",
     "tslint": "^5.10.0",
     "typescript": "^2.9.1"
