--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^1.2.1",
+    "@material-ui/icons": "^3.0.1",
     "@types/react-redux": "^6.0.5",
     "@types/react-router-dom": "^4.3.0",
     "@types/recompose": "^0.26.1",
@@ -32,6 +33,6 @@
     "@types/redux-logger": "^3.0.6",
     "recompose": "^0.27.1",
     "tslint": "^5.10.0",
-    "typescript": "^2.9.1"
+    "typescript": "^3.0.3"
   }
 }
